--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
-    "inquirer": "^13.1.0",
+    "chalk": "^5.6.2",
+    "inquirer": "^9.2.19",
     "qrcode-terminal": "^0.12.0"
   }
 }
